# Python-Sandbox

./: draw_triangles.py
SquareMaker/: .gitignore  README.md  pyproject.toml  setup.py
SquareMaker/squaremaker/: square.py
example/: README.md  example.py  pyproject.toml
triangle_multimod/: draw_triangles.py
triangle_multimod/draw/: triplot.py
triangle_multimod/geometry/: graphics.py
triangle_multimod/test/: test.py
triangledraw/: .gitignore  README.md  pyproject.toml  setup.py
triangledraw/test/: test.py
triangledraw/triangledraw/draw/: triplot.py
triangles/test/: test.py
